<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/APVG_pink"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Zodiac"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="32dp"
        android:text="@string/title_label"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Caja de texto - Nombre -->
    <EditText
        android:id="@+id/Nombre"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:layout_marginBottom="500dp"
        android:background="@android:color/background_light"
        android:hint="@string/hint_name"
        android:ems="10"
        android:inputType="text"
        android:maxLength="15"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Zodiac" />

    <!-- Caja de texto - Fecha de nacimiento -->
    <EditText
        android:id="@+id/Fecha_Nacimiento"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="500dp"
        android:background="@android:color/background_light"
        android:hint="@string/hint_fecha_nac"
        android:ems="10"
        android:inputType="date"
        android:maxLength="10"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/Nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <!-- Caja de texto - Número de Cuenta -->
    <EditText
        android:id="@+id/No_Cuenta"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="500dp"
        android:background="@android:color/background_light"
        android:hint="@string/hint_no_cuenta"
        android:ems="10"
        android:inputType="text"
        android:maxLength="10"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/Fecha_Nacimiento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Caja de texto - Correo Electrónico -->
    <EditText
        android:id="@+id/Correo"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="500dp"
        android:background="@android:color/background_light"
        android:hint="@string/hint_correo"
        android:ems="10"
        android:inputType="text"
        android:maxLength="35"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/No_Cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


    <Button
        android:id="@+id/btnCheck"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:text="@string/button_check"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/Correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>